@@ -8,7 +8,8 @@
 #include <QGridLayout>
 #include <QToolButton>
 
-GraphW::GraphW()
+GraphW::GraphW() :
+	preamp( 0.5f )
 {
 	setAutoFillBackground( true );
 	setPalette( Qt::black );
@@ -16,11 +17,11 @@ GraphW::GraphW()
 
 void GraphW::setValue( int idx, float val )
 {
-	if ( values.size() > idx )
-	{
+	if ( idx == -1 ) //Preamp
+		preamp = val;
+	else if ( values.size() > idx )
 		values[ idx ] = val;
-		repaint();
-	}
+	update();
 }
 
 void GraphW::paintEvent( QPaintEvent * )
@@ -38,7 +39,7 @@ void GraphW::paintEvent( QPaintEvent * )
 			path.lineTo( i, 1.0 - graph[ i ] );
 
 		p.setPen( QPen( QColor( 102, 51, 128 ), 0.0 ) );
-		p.drawLine( QLineF( 0, 0.5, width(), 0.5 ) );
+		p.drawLine( QLineF( 0, preamp, width(), preamp ) );
 
 		p.setPen( QPen( QColor( 102, 179, 102 ), 0.0 ) );
 		p.drawPath( path );
@@ -58,6 +59,9 @@ EqualizerGUI::EqualizerGUI( Module &module ) :
 	QCheckBox *enabledB = new QCheckBox;
 
 	QFrame *frame = new QFrame;
+	frame->setSizePolicy( QSizePolicy::Preferred, QSizePolicy::Expanding );
+	frame->setMaximumHeight( 90 );
+	frame->setMinimumHeight( 30 );
 	frame->setFrameShadow( QFrame::Sunken );
 	frame->setFrameShape( QFrame::StyledPanel );
 	QGridLayout *graphLayout = new QGridLayout( frame );
@@ -135,11 +139,12 @@ void EqualizerGUI::setSliders()
 		QSlider *slider = qobject_cast< QSlider * >( o );
 		if ( slider )
 		{
-			if ( sender()->objectName() == "maxB" )
+			const bool isPreamp = slider->property( "preamp" ).toBool();
+			if ( sender()->objectName() == "maxB" && !isPreamp )
 				slider->setValue( slider->maximum() - 3 );
 			else if ( sender()->objectName() == "resetB" )
 				slider->setValue( slider->maximum() / 2 );
-			else if ( sender()->objectName() == "minB" )
+			else if ( sender()->objectName() == "minB" && !isPreamp )
 				slider->setValue( slider->minimum() + 3 );
 		}
 	}
@@ -156,7 +161,7 @@ bool EqualizerGUI::set()
 
 	QVector< float > freqs = Equalizer::freqs( sets() );
 	graph.setValues( freqs.count() );
-	for ( int i = 0 ; i < freqs.count() ; ++i )
+	for ( int i = -1 ; i < freqs.count() ; ++i )
 	{
 		QSlider *slider = new QSlider;
 		slider->setMaximum( 100 );
@@ -168,26 +173,25 @@ bool EqualizerGUI::set()
 
 		graph.setValue( i, slider->value() / 100.0f );
 
-		QString freq;
-		if ( freqs[ i ] < 1000.0f )
-			freq = QString::number( freqs[ i ], 'f', 0 ) + "\n";
-		else
-			freq = QString::number( freqs[ i ] / 1000.0f, 'g', 2 ) + "\nk";
-		QLabel *freqL = new QLabel( freq + "Hz" );
-		freqL->setAlignment( Qt::AlignCenter );
+		QLabel *descrL = new QLabel;
+		descrL->setAlignment( Qt::AlignCenter );
 
-		slidersLayout->addWidget( slider, 0, i );
-		slidersLayout->addWidget( freqL, 1, i );
+		if ( i == -1 )
+		{
+			descrL->setText( tr( "Pre\namp" ) );
+			slider->setProperty( "preamp", true );
+		}
+		else if ( freqs[ i ] < 1000.0f )
+			descrL->setText( QString::number( freqs[ i ], 'f', 0 ) + "\nHz" );
+		else
+			descrL->setText( QString::number( freqs[ i ] / 1000.0f, 'g', 2 ) + "k\nHz" );
+
+		slidersLayout->addWidget( slider, 0, i+1 );
+		slidersLayout->addWidget( descrL, 1, i+1 );
 	}
 
 	layout->addWidget( slidersW, 2, 1, 1, 1 );
 	connect( dw, SIGNAL( visibilityChanged( bool ) ), slidersW, SLOT( setEnabled( bool ) ) );
 
 	return true;
-}
-
-void EqualizerGUI::resizeEvent( QResizeEvent *e )
-{
-	graph.setMinimumSize( 0, height() / 4 );
-	QWidget::resizeEvent( e );
 }
